--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 
     "name": "laravel/laravel",
 
-    "name": "mp-ecommerce-php",
+    "name": "mp-commerce-php",
 
     "type": "project",
     "description": "The Laravel Framework.",
